Sun Nov 15 08:09:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Renamed all files for x.7.4

Fri Nov 13 19:38:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Sys::Hostname shouldn't be used in a test script, use HostName on
          the test target instead

Fri Nov 13 01:54:01 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_common.GNU:
        * include/makeinclude/platform_macosx_snowleopard.GNU:

          Added support for buildbits=universal for building 32/64 bit
          universal binaries with GCC.

Fri Nov 13 01:12:33 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_common.GNU:

          Fixed 32 bit support.

Fri Nov 13 00:33:49 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * ace/Logging_Strategy.h:
        * ace/Logging_Strategy.cpp:

          Added static service declaration and definition to fix loading
          issue in TAO Service (e.g Notify) in static builds.

Thu Nov 12 15:53:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Exteded perl fuzz checks

Thu Nov 12 08:31:00 UTC 2009  Denis Budko <denis.budko@remedy.nl>

        * docs/run_test.txt
          Added description of TestTarget::HostName() function usage

Thu Nov 12 06:54:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Default_Constants.h:
        * ace/OS_NS_fcntl.h:
        * ace/RW_Process_Mutex.h:
          Moved all constants to Default_Constants.h

Wed Nov 11 14:57:15 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Network_Adapters_Test and SOCK_Dgram_Bcast_Test on LynxOS.

Wed Nov 11 13:49:11 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Added ACE_HAS_SIGISMEMBER_BUG.

Wed Nov 11 12:07:36 UTC 2009  Olli Savia  <ops@iki.fi>

        * bin/fuzz.pl: