@@ -1,3 +1,10 @@
+Mon Nov 16 14:40:42 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * include/makeinclude/platform_win32_interix.GNU:
+        * ace/config-win32-interix.h:
+        * ace/os_include/sys/os_types.h:
+          Updated Interix support.
+
 Sun Nov 15 08:09:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * debianbuild/*:
